--- a/styleL.css
+++ b/styleL.css
@@ -11,10 +11,41 @@ h1{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 30px;
    display: flex;
-   margin-left: 45px;
+   margin-left: 50px;
    margin-right: 10px;
    margin-top: 40px;
 }
 img{
     width: 200px;
+    border-left-style: solid;
+    border-left-width: 45px;
+    border-color: #f0ba38
 }
+p{
+    text-align: center;
+    display: flex;
+    font-size: 25px;
+}
+.botao{
+    background-color: white;
+    height: 50px;
+    width: 200px;
+    color: black;
+    font-size: 20px;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-left-style: solid;
+    margin-left: 47px;
+}
+p2{
+    font-size: 16px;
+    display: flex;
+    text-align: center;
+}
+
+
+
+
+
