--- a/styleL.css
+++ b/styleL.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 480px){
 body{
     background-image: linear-gradient(to bottom right, rgb(240, 200, 68), rgb(241, 136, 15));
     width:300px;
@@ -32,11 +33,7 @@ p{
     width: 200px;
     color: black;
     font-size: 20px;
-    border-bottom-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-left-style: solid;
+    border-radius: 50px;
     margin-left: 47px;
 }
 p2{
@@ -44,7 +41,7 @@ p2{
     display: flex;
     text-align: center;
 }
-
+}
 
 
 
